// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DialogFooter should render correctly 1`] = `
<div>
  <footer
    class="rmd-dialog__footer rmd-dialog__footer--flex rmd-dialog__footer--end"
  >
    <button
      class="rmd-button rmd-button--text"
      type="button"
    >
      First Button
      <span
        class="rmd-ripple-container"
      />
    </button>
    <button
      class="rmd-button rmd-button--text"
      type="button"
    >
      Second Button
      <span
        class="rmd-ripple-container"
      />
    </button>
  </footer>
</div>
`;

exports[`DialogFooter should render correctly 2`] = `
<div>
  <footer
    class="rmd-dialog__footer"
  >
    <button
      class="rmd-button rmd-button--text"
      type="button"
    >
      First Button
      <span
        class="rmd-ripple-container"
      />
    </button>
    <button
      class="rmd-button rmd-button--text"
      type="button"
    >
      Second Button
      <span
        class="rmd-ripple-container"
      />
    </button>
  </footer>
</div>
`;

exports[`DialogFooter should render correctly 3`] = `
<div>
  <footer
    class="rmd-dialog__footer rmd-dialog__footer--flex rmd-dialog__footer--start"
  >
    <button
      class="rmd-button rmd-button--text"
      type="button"
    >
      First Button
      <span
        class="rmd-ripple-container"
      />
    </button>
    <button
      class="rmd-button rmd-button--text"
      type="button"
    >
      Second Button
      <span
        class="rmd-ripple-container"
      />
    </button>
  </footer>
</div>
`;

exports[`DialogFooter should render correctly 4`] = `
<div>
  <footer
    class="rmd-dialog__footer rmd-dialog__footer--flex rmd-dialog__footer--end"
  >
    <button
      class="rmd-button rmd-button--text"
      type="button"
    >
      First Button
      <span
        class="rmd-ripple-container"
      />
    </button>
    <button
      class="rmd-button rmd-button--text"
      type="button"
    >
      Second Button
      <span
        class="rmd-ripple-container"
      />
    </button>
  </footer>
</div>
`;

exports[`DialogFooter should render correctly 5`] = `
<div>
  <footer
    class="rmd-dialog__footer rmd-dialog__footer--flex rmd-dialog__footer--between"
  >
    <button
      class="rmd-button rmd-button--text"
      type="button"
    >
      First Button
      <span
        class="rmd-ripple-container"
      />
    </button>
    <button
      class="rmd-button rmd-button--text"
      type="button"
    >
      Second Button
      <span
        class="rmd-ripple-container"
      />
    </button>
  </footer>
</div>
`;

exports[`DialogFooter should render correctly 6`] = `
<div>
  <footer
    class="rmd-dialog__footer rmd-dialog__footer--flex rmd-dialog__footer--flex-v rmd-dialog__footer--start"
  >
    <button
      class="rmd-button rmd-button--text"
      type="button"
    >
      First Button
      <span
        class="rmd-ripple-container"
      />
    </button>
    <button
      class="rmd-button rmd-button--text"
      type="button"
    >
      Second Button
      <span
        class="rmd-ripple-container"
      />
    </button>
  </footer>
</div>
`;

exports[`DialogFooter should render correctly 7`] = `
<div>
  <footer
    class="rmd-dialog__footer rmd-dialog__footer--flex rmd-dialog__footer--flex-v rmd-dialog__footer--end"
  >
    <button
      class="rmd-button rmd-button--text"
      type="button"
    >
      First Button
      <span
        class="rmd-ripple-container"
      />
    </button>
    <button
      class="rmd-button rmd-button--text"
      type="button"
    >
      Second Button
      <span
        class="rmd-ripple-container"
      />
    </button>
  </footer>
</div>
`;
